optimized classes and fixed hero spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -66,7 +66,6 @@ p {
     overflow: hidden;
 
     padding-top: 150px;
-    /*border: 1px red solid;*/
 }
 
 
@@ -85,18 +84,6 @@ p {
 .main.after {opacity: 1;}
 
 .main.after #name .hero-title {line-height: 10rem;}
-
-
-/* NAV SECTION */
-
-nav {
-    width: 100vw;
-    position: fixed;
-    height: 5rem;
-
-    background-image: linear-gradient(rgba(20, 20, 20, 1.0), rgba(20, 20, 20, 0.0));
-    z-index: 1000;
-}
 
 
 /* HERO SECTION */
@@ -133,12 +120,14 @@ nav {
 
 #name {
     display: block;
+    overflow: hidden;
     gap: 1rem;
     width: 25vw;
-    height: 500px;
+    height: 70vh;
+    min-height: 500px;
 
     padding-top: 0;
-    margin: 0 auto 300px auto;
+    margin: 0 auto 25vh auto;
 
     transition: all 0.7s;
 }
